--- a/ActiveLearning/certh_integration/231031_mnist/1.convert_dataset_2_explorer.ipynb
+++ b/ActiveLearning/certh_integration/231031_mnist/1.convert_dataset_2_explorer.ipynb
@@ -2,107 +2,134 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nIn this notebook we will convert the MNIST dataset into Pixano Format\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "In this notebook we will convert the MNIST dataset into Pixano Format\n",
+    "\n",
+    "Note: For running, activate the pixano env\n",
     "\"\"\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NOTE : Before running this notebook, set the value for the following variables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# give a name to the new dataset\n",
-    "DATASET_NAME=\"MNIST_pixano_v7\""
+    "# The root dir name of the current repo (i.e. pixano or pixano-main etc.)\n",
+    "ROOTDIR='pixano_v1.0'\n",
+    "# name of the dataset\n",
+    "DATASET_NAME=\"MNIST_pixano_v1\"\n",
+    "# directory where the raw mnist dataset will be saved to be transformed latter (images), and also to be used by the active learning auto-annotator (labels)\n",
+    "datasets_dir=\"/home/melissap/Desktop/LAGO/3.githubs/integration/datasets\"\n",
+    "# directory in which the transformed mnist dataset will be saved to be used by Pixano\n",
+    "library_dir=\"/home/melissap/_pixano_datasets_\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ... the rest of the notebook should run without any code adjustments/modifications."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "import shutil\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from torchvision import datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/melissap/Desktop/LAGO_43integrationDemo/pixano/ActiveLearning/certh_integration/231031_mnist\n",
-      "/home/melissap/Desktop/LAGO_43integrationDemo/pixano/ActiveLearning/certh_integration\n",
-      "/home/melissap/Desktop/LAGO_43integrationDemo/pixano/ActiveLearning\n",
-      "Inserting parent dir :  /home/melissap/Desktop/LAGO_43integrationDemo/pixano\n"
+      "Inserting parent dir :  /home/melissap/Desktop/LAGO_43integrationDemo/pixano_v1.0\n"
      ]
     }
    ],
    "source": [
-    "# import ROOT dir to import pixano root module\n",
-    "\n",
-    "import os\n",
-    "import sys\n",
-    "\n",
     "def insertRootDir(ROOTDIR='pixano'):\n",
     "    pardir=os.path.dirname(os.path.realpath('__file__'))\n",
     "\n",
+    "    found = False\n",
+    "    potential_root_dir = os.path.basename(os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.realpath('__file__'))))))\n",
+    "\n",
     "    while(os.path.basename(pardir)!=ROOTDIR):\n",
     "\n",
-    "        print(pardir)\n",
+    "        # print(pardir)\n",
     "        pardir=os.path.dirname(pardir)\n",
-    "        # print(os.path.basename(pardir))\n",
-    "    print(\"Inserting parent dir : \",pardir)\n",
-    "    sys.path.insert(0,pardir)\n",
+    "        \n",
     "\n",
-    "insertRootDir()"
+    "        if (os.path.basename(pardir) == ROOTDIR):\n",
+    "            found = True\n",
+    "            break\n",
+    "        if (pardir == \"/\" ):\n",
+    "            break\n",
+    "    \n",
+    "    if found:\n",
+    "        print(\"Inserting parent dir : \",pardir)\n",
+    "        sys.path.insert(0,pardir)\n",
+    "        return pardir\n",
+    "    else:\n",
+    "        print(f\"ROOTDIR NOT FOUND. You may have to change ROOTDIR variable from : '{ROOTDIR}' to '{potential_root_dir}'\")\n",
+    "        return \"_NOT_FOUND_\"\n",
+    "\n",
+    "ROOTDIR = insertRootDir(ROOTDIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/melissap/miniconda3/envs/pixano/lib/python3.10/site-packages/pixano/apps/explorer/dist/assets\n"
+      "/home/melissap/miniconda3/envs/pixano_env/lib/python3.10/site-packages/pixano/apps/explorer/dist/assets\n"
      ]
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "from pixano.apps import Explorer\n",
     "from pixano.data import ImageImporter, MnistImporter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download mnist and convert it to an image dataset\n",
-    "from torchvision import datasets\n",
-    "from PIL import Image\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
     "def get_MNIST(data_dir):\n",
+    "\n",
+    "    framecounter = 0 \n",
+    "    # downloads mnist and convert it to an image dataset\n",
     "\n",
     "    image_dir = os.path.join(data_dir,\"images\")\n",
     "    annotation_dir = os.path.join(data_dir,\"annotations\")\n",
@@ -110,9 +137,11 @@
     "    val_imdir = os.path.join(image_dir,\"val\")\n",
     "    test_imdir = os.path.join(image_dir,\"test\")\n",
     "\n",
-    "    train_andir = os.path.join(annotation_dir,\"train\")\n",
-    "    val_andir = os.path.join(annotation_dir,\"val\")\n",
-    "    test_andir = os.path.join(annotation_dir,\"test\")\n",
+    "    raw_downloaDir = os.path.join(data_dir,\"raw_dataset\")\n",
+    "\n",
+    "    train_anfile = os.path.join(annotation_dir,\"train.csv\")\n",
+    "    val_anfile = os.path.join(annotation_dir,\"val.csv\") # not used\n",
+    "    test_anfile = os.path.join(annotation_dir,\"test.csv\")\n",
     "    \n",
     "    if os.path.isdir(image_dir) and os.path.isdir(annotation_dir):\n",
     "       pass\n",
@@ -123,14 +152,11 @@
     "            os.makedirs(train_imdir)\n",
     "            os.makedirs(val_imdir)\n",
     "            os.makedirs(test_imdir)\n",
-    "            os.makedirs(train_andir)\n",
-    "            os.makedirs(val_andir)\n",
-    "            os.makedirs(test_andir)\n",
     "        except:\n",
     "            pass\n",
     "\n",
-    "        raw_tr = datasets.MNIST(os.path.join(data_dir, 'MNIST'), train=True, download=True)\n",
-    "        raw_te = datasets.MNIST(os.path.join(data_dir, 'MNIST'), train=False, download=True)\n",
+    "        raw_tr = datasets.MNIST(raw_downloaDir, train=True, download=True)\n",
+    "        raw_te = datasets.MNIST(raw_downloaDir, train=False, download=True)\n",
     "        X_tr = raw_tr.data\n",
     "        Y_tr = raw_tr.targets\n",
     "        X_te = raw_te.data\n",
@@ -139,31 +165,137 @@
     "        for i in range(len(X_tr)):\n",
     "            x=X_tr[i].numpy()\n",
     "            im = Image.fromarray(x)\n",
-    "            savepath = os.path.join(train_imdir,str(i)+\".jpeg\")\n",
+    "            savepath = os.path.join(train_imdir,str(framecounter)+\".jpeg\")\n",
     "            im.save(savepath)\n",
+    "            framecounter+=1\n",
     "\n",
     "        for i in range(len(X_te)):\n",
-    "            x=X_tr[i].numpy()\n",
+    "            x=X_te[i].numpy()\n",
     "            im = Image.fromarray(x)\n",
-    "            savepath = os.path.join(test_imdir,str(i)+\".jpeg\")\n",
+    "            savepath = os.path.join(test_imdir,str(framecounter)+\".jpeg\")\n",
     "            im.save(savepath)\n",
+    "            framecounter+=1\n",
     "\n",
     "        y=pd.DataFrame(Y_tr.numpy())\n",
-    "        savepath = os.path.join(train_andir,\"dataframe.csv\")\n",
-    "        y.to_csv(savepath,index=False)\n",
+    "        y.to_csv(train_anfile,index=False)\n",
     "            \n",
     "        y=pd.DataFrame(Y_te.numpy())\n",
-    "        savepath = os.path.join(test_andir,\"dataframe.csv\")\n",
-    "        y.to_csv(savepath,index=False)"
+    "        y.to_csv(test_anfile,index=False)\n",
+    "\n",
+    "\n",
+    "        # remove raw data\n",
+    "        shutil.rmtree(raw_downloaDir)\n",
+    "        print(f'Dataset succesfull downoladed within {data_dir}, framecounter = {framecounter}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9912422/9912422 [00:00<00:00, 71900068.39it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 28881/28881 [00:00<00:00, 125659433.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1648877/1648877 [00:00<00:00, 34503893.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4542/4542 [00:00<00:00, 15968590.75it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n",
+      "\n",
+      "Dataset succesfull downoladed within /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST, framecounter = 70000\n"
+     ]
+    }
+   ],
    "source": [
-    "datasets_dir=\"/home/melissap/Desktop/LAGO/3.githubs/integration/datasets\"\n",
     "mnist_dir=Path(os.path.join(datasets_dir,\"MNIST\"))\n",
     "\n",
     "# Dataset information\n",
@@ -177,7 +309,7 @@
     "    # \"objects\": library_dir / \"annotations\",\n",
     "}\n",
     "\n",
-    "library_dir=Path('/home/melissap/_pixano_datasets_')\n",
+    "library_dir=Path(library_dir)\n",
     "import_dir = library_dir / DATASET_NAME #(\"MNIST_pixano\"+\"_\"+str(dt))\n",
     "\n",
     "get_MNIST(mnist_dir)"
@@ -185,22 +317,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function import_dataset in module pixano.data.importers.importer:\n",
+      "\n",
+      "import_dataset(self, input_dirs: dict[str, pathlib.Path], import_dir: pathlib.Path, portable: bool = False) -> pixano.data.dataset.Dataset\n",
+      "    Import dataset to Pixano format\n",
+      "    \n",
+      "    Args:\n",
+      "        input_dirs (dict[str, Path]): Input directories\n",
+      "        import_dir (Path): Import directory\n",
+      "        portable (bool, optional): True to copy or download files to import directory and use relative paths. Defaults to False.\n",
+      "    \n",
+      "    Returns:\n",
+      "        Dataset: Imported dataset\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(ImageImporter.import_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2023-11-28T11:37:32Z WARN  lance::dataset] No existing dataset at /home/melissap/_pixano_datasets_/MNIST_pixano_v1/db.lance, it will be created\n",
+      "[2023-11-28T11:37:32Z WARN  lance::dataset] No existing dataset at /home/melissap/_pixano_datasets_/MNIST_pixano_v1/image.lance, it will be created\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c49b3c0eaba491fa40ee121e4789aa5",
+       "model_id": "65e56ae476774474a072a5f3b5d4b12c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0170b174fa33454cb4994fd685c5796d",
+       "model_id": "a1ba1e772fec48768217f85945f990b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "497b6ce80d764d1a95a6702b4a0a054e",
+       "model_id": "29d5218949084e5fbfe96d6af9aa41bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,7 +402,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1370a8920d44a61befef441c9021451",
+       "model_id": "d8e9ddfa804f4b9c90aec989ab80c3a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,10 +416,10 @@
     {
      "data": {
       "text/plain": [
-       "<pixano.data.dataset.Dataset at 0x7fc3633bd7b0>"
+       "<pixano.data.dataset.Dataset at 0x7f8ce3c4ab00>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,6 +427,13 @@
    "source": [
     "importer = ImageImporter(name, description, splits)\n",
     "importer.import_dataset(input_dirs, import_dir, portable=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### !ERROR: Here we found and issue. explorer doesn't return a localhost port for opening Pixano GUI. A fix is required."
    ]
   },
   {
@@ -282,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.11 ('pixano')",
+   "display_name": "Python 3.10.13 ('pixano_env3')",
    "language": "python",
    "name": "python3"
   },
@@ -296,12 +463,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6604ca948f4575fb1939f96f2cd7df5de428f245d6855ef61050d788c6a2a026"
+    "hash": "faa21598805a2aeab7a6cebb281d986b89a84993d64c8b80ad12581d75a6a376"
    }
   }
  },
