--- a/ActiveLearning/certh_integration/231128_crime/1.import_dataset_2.explore_dataset.ipynb
+++ b/ActiveLearning/certh_integration/231128_crime/1.import_dataset_2.explore_dataset.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nIn this notebook we will convert the MNIST dataset into Pixano Format\\n\\nNote: For running, activate the pixano env\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "In this notebook we will convert the MNIST dataset into Pixano Format\n",
+    "In this notebook we will convert the CIFAR10 dataset into Pixano Format\n",
+    "and we will augment the dataset by one more class (guns) using the G\n",
     "\n",
     "Note: For running, activate the pixano env\n",
     "\"\"\""
@@ -22,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The root dir name of the current repo (i.e. pixano or pixano-main etc.)\n",
-    "ROOTDIR='pixano_v1.0'\n",
+    "ROOTDIR='pixano'\n",
     "# name of the dataset\n",
-    "DATASET_NAME=\"MNIST_pixano_v1\"\n",
-    "# directory where the raw mnist dataset will be saved to be transformed latter (images), and also to be used by the active learning auto-annotator (labels)\n",
+    "DATASET_NAME=\"CIFAR11_guns_pixano_v1\"\n",
+    "# directory where the raw cifar11 dataset will be saved to be transformed latter (images), and also to be used by the active learning auto-annotator (labels)\n",
     "datasets_dir=\"/home/melissap/Desktop/LAGO/3.githubs/integration/datasets\"\n",
-    "# directory in which the transformed mnist dataset will be saved to be used by Pixano\n",
-    "library_dir=\"/home/melissap/_pixano_datasets_\"\n"
+    "# directory in which the transformed cifar11 dataset will be saved to be used by Pixano\n",
+    "library_dir=\"/home/melissap/_pixano_datasets_\""
    ]
   },
   {
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,22 +65,24 @@
     "import sys\n",
     "from pathlib import Path\n",
     "import shutil\n",
+    "import random\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from torchvision import datasets"
+    "from torchvision import datasets\n",
+    "from dowload_GunDataset import getGunDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserting parent dir :  /home/melissap/Desktop/LAGO_43integrationDemo/pixano_v1.0\n"
+      "Inserting parent dir :  /home/melissap/Desktop/LAGO_43integrationDemo/pixano\n"
      ]
     }
    ],
@@ -104,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,32 +131,37 @@
    ],
    "source": [
     "from pixano.apps import Explorer\n",
-    "from pixano.data import ImageImporter, MnistImporter"
+    "from pixano.data import ImageImporter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_MNIST(data_dir):\n",
+    "random.seed( 1 )\n",
+    "\n",
+    "# local directory sto store the raw dataset\n",
+    "cifar_dir=Path(os.path.join(datasets_dir,\"CIFAR11\"))\n",
+    "\n",
+    "def get_CIFAR11(data_dir):\n",
     "\n",
     "    framecounter = 0 \n",
-    "    # downloads mnist and convert it to an image dataset\n",
     "\n",
     "    image_dir = os.path.join(data_dir,\"images\")\n",
     "    annotation_dir = os.path.join(data_dir,\"annotations\")\n",
     "    train_imdir = os.path.join(image_dir,\"train\")\n",
     "    val_imdir = os.path.join(image_dir,\"val\")\n",
     "    test_imdir = os.path.join(image_dir,\"test\")\n",
-    "\n",
+    "    \n",
     "    raw_downloaDir = os.path.join(data_dir,\"raw_dataset\")\n",
-    "\n",
+    "    \n",
     "    train_anfile = os.path.join(annotation_dir,\"train.csv\")\n",
     "    val_anfile = os.path.join(annotation_dir,\"val.csv\") # not used\n",
     "    test_anfile = os.path.join(annotation_dir,\"test.csv\")\n",
     "    \n",
+    "    # if True:\n",
     "    if os.path.isdir(image_dir) and os.path.isdir(annotation_dir):\n",
     "       pass\n",
     "    else: \n",
@@ -155,169 +174,108 @@
     "        except:\n",
     "            pass\n",
     "\n",
-    "        raw_tr = datasets.MNIST(raw_downloaDir, train=True, download=True)\n",
-    "        raw_te = datasets.MNIST(raw_downloaDir, train=False, download=True)\n",
-    "        X_tr = raw_tr.data\n",
-    "        Y_tr = raw_tr.targets\n",
-    "        X_te = raw_te.data\n",
-    "        Y_te = raw_te.targets\n",
+    "        # GET CIFAR10\n",
+    "        raw_tr = datasets.CIFAR10(raw_downloaDir, train=True, download=True)\n",
+    "        raw_te = datasets.CIFAR10(raw_downloaDir, train=False, download=True)\n",
+    "        CF_X_tr = raw_tr.data\n",
+    "        CF_Y_tr = raw_tr.targets\n",
+    "        CF_X_te = raw_te.data\n",
+    "        CF_Y_te = raw_te.targets\n",
     "\n",
+    "        destination_tar = os.path.join(data_dir,\"gun-dataset.tar.gz\")\n",
+    "        \n",
+    "        # download the guns dataset\n",
+    "        GN_dataset_dir = getGunDataset(destination_tar)\n",
+    "        GN_tr_dir = os.path.join(GN_dataset_dir,\"train\")\n",
+    "        GN_te_dir = os.path.join(GN_dataset_dir,\"test\")\n",
+    "\n",
+    "        # convert guns dataset - read, resize, to_numpy\n",
+    "        GN_X_tr = [np.array(Image.open(os.path.join(GN_tr_dir,im)).resize((32,32), Image.Resampling.LANCZOS)) for im in os.listdir(GN_tr_dir)]\n",
+    "        GN_X_te = [np.array(Image.open(os.path.join(GN_te_dir,im)).resize((32,32), Image.Resampling.LANCZOS)) for im in os.listdir(GN_te_dir)]\n",
+    "        GN_Y_tr = [int(10) for im in range(len(GN_X_tr))] # 10 classes on CIFAR (0 .. 9). The new one, has one-hot encoding equal to number of 10 (the 11th class).\n",
+    "        GN_Y_te = [int(10) for im in range(len(GN_X_te))]\n",
+    "\n",
+    "        # subsampling to make a uniform distribution across all classes, including the new class inserted (i.e. GUNs)\n",
+    "        cf_num_classes = 10\n",
+    "        tr_num_samples = len(CF_Y_tr) // cf_num_classes # == num samples per class on the training set\n",
+    "        tr_subsampling_idxs = random.sample(range(0, len(GN_Y_tr)-1), tr_num_samples ) # apply subsampling on the training set\n",
+    "        GN_X_tr = [GN_X_tr[i] for i in tr_subsampling_idxs]\n",
+    "        GN_Y_tr = [GN_Y_tr[i] for i in tr_subsampling_idxs]\n",
+    "\n",
+    "        te_num_samples = len(CF_Y_te) // cf_num_classes # == 1000 samples per class on the testing set\n",
+    "        # Testing split requires no subsampling. There are 1000 num samples per class in the CIFAR, and 998 num of samples in the GUNsDataset. Subsampling is skipped.\n",
+    "\n",
+    "        # merge the two datasets\n",
+    "        X_tr = [*CF_X_tr , *GN_X_tr]\n",
+    "        Y_tr = [*CF_Y_tr , *GN_Y_tr]\n",
+    "        X_te = [*CF_X_te , *GN_X_te]\n",
+    "        Y_te = [*CF_Y_te , *GN_Y_te]\n",
+    "\n",
+    "        # shuffle before saving\n",
+    "        tr_shuffled_idxs = list(range(len(Y_tr)))\n",
+    "        te_shuffled_idxs = list(range(len(Y_te)))\n",
+    "        random.shuffle(tr_shuffled_idxs)\n",
+    "        random.shuffle(te_shuffled_idxs)\n",
+    "        X_tr = [X_tr[i] for i in tr_shuffled_idxs]\n",
+    "        Y_tr = [Y_tr[i] for i in tr_shuffled_idxs]\n",
+    "        X_te = [X_te[i] for i in te_shuffled_idxs]\n",
+    "        Y_te = [Y_te[i] for i in te_shuffled_idxs]\n",
+    "\n",
+    "        # store frames\n",
     "        for i in range(len(X_tr)):\n",
-    "            x=X_tr[i].numpy()\n",
+    "            x=np.array(X_tr[i])\n",
     "            im = Image.fromarray(x)\n",
     "            savepath = os.path.join(train_imdir,str(framecounter)+\".jpeg\")\n",
     "            im.save(savepath)\n",
     "            framecounter+=1\n",
     "\n",
     "        for i in range(len(X_te)):\n",
-    "            x=X_te[i].numpy()\n",
+    "            x=np.array(X_te[i])\n",
     "            im = Image.fromarray(x)\n",
     "            savepath = os.path.join(test_imdir,str(framecounter)+\".jpeg\")\n",
     "            im.save(savepath)\n",
     "            framecounter+=1\n",
     "\n",
-    "        y=pd.DataFrame(Y_tr.numpy())\n",
+    "        # store annotations\n",
+    "        y=pd.DataFrame(np.array(Y_tr))\n",
     "        y.to_csv(train_anfile,index=False)\n",
     "            \n",
-    "        y=pd.DataFrame(Y_te.numpy())\n",
+    "        y=pd.DataFrame(np.array(Y_te))\n",
     "        y.to_csv(test_anfile,index=False)\n",
-    "\n",
     "\n",
     "        # remove raw data\n",
     "        shutil.rmtree(raw_downloaDir)\n",
+    "        shutil.rmtree(GN_dataset_dir)\n",
     "        print(f'Dataset succesfull downoladed within {data_dir}, framecounter = {framecounter}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9912422/9912422 [00:00<00:00, 71900068.39it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 28881/28881 [00:00<00:00, 125659433.43it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/train-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1648877/1648877 [00:00<00:00, 34503893.46it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-images-idx3-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4542/4542 [00:00<00:00, 15968590.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw/t10k-labels-idx1-ubyte.gz to /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST/raw_dataset/MNIST/raw\n",
-      "\n",
-      "Dataset succesfull downoladed within /home/melissap/Desktop/LAGO/3.githubs/integration/datasets/MNIST, framecounter = 70000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mnist_dir=Path(os.path.join(datasets_dir,\"MNIST\"))\n",
     "\n",
     "# Dataset information\n",
-    "name = \"Mnist dataset\"\n",
-    "description = \"http://yann.lecun.com/exdb/mnist/\"\n",
+    "name = \"CIFAR11 dataset\"\n",
+    "description = \"CIFAR10 : https://www.cs.toronto.edu/~kriz/cifar.html , Gun Detection Dataset : https://www.linksprite.com/gun-detection-datasets/\"\n",
     "splits = [\"train\", \"test\"] # \"val\",\n",
     "\n",
     "# Input information\n",
     "input_dirs = {\n",
-    "    \"image\": mnist_dir / \"images\" #,\n",
+    "    \"image\": cifar_dir / \"images\" #,\n",
     "    # \"objects\": library_dir / \"annotations\",\n",
     "}\n",
     "\n",
     "library_dir=Path(library_dir)\n",
-    "import_dir = library_dir / DATASET_NAME #(\"MNIST_pixano\"+\"_\"+str(dt))\n",
+    "import_dir = library_dir / DATASET_NAME\n",
     "\n",
-    "get_MNIST(mnist_dir)"
+    "get_CIFAR11(cifar_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,21 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-11-28T11:37:32Z WARN  lance::dataset] No existing dataset at /home/melissap/_pixano_datasets_/MNIST_pixano_v1/db.lance, it will be created\n",
-      "[2023-11-28T11:37:32Z WARN  lance::dataset] No existing dataset at /home/melissap/_pixano_datasets_/MNIST_pixano_v1/image.lance, it will be created\n"
+      "[2023-12-01T12:26:34Z WARN  lance::dataset] No existing dataset at /home/melissap/_pixano_datasets_/CIFAR11_guns_pixano_v1/db.lance, it will be created\n",
+      "[2023-12-01T12:26:34Z WARN  lance::dataset] No existing dataset at /home/melissap/_pixano_datasets_/CIFAR11_guns_pixano_v1/image.lance, it will be created\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65e56ae476774474a072a5f3b5d4b12c",
+       "model_id": "ddd13f3740634d528bc658d3edf03241",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1ba1e772fec48768217f85945f990b3",
+       "model_id": "583de95387714def9aadc137397d78be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +346,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29d5218949084e5fbfe96d6af9aa41bf",
+       "model_id": "66945c32e1e14a53bc83fef5342bf1a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +360,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8e9ddfa804f4b9c90aec989ab80c3a4",
+       "model_id": "71cfd51ce7f046df953413775a9a3fa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,10 +374,10 @@
     {
      "data": {
       "text/plain": [
-       "<pixano.data.dataset.Dataset at 0x7f8ce3c4ab00>"
+       "<pixano.data.dataset.Dataset at 0x7f5447f60c10>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,12 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "explorer = Explorer(library_dir)\n",
-    "explorer.display()"
+    "# explorer = Explorer(library_dir)\n",
+    "# explorer.display()"
    ]
   }
  ],
