support for device param added

--- a/ActiveLearning/_mnist.ipynb
+++ b/ActiveLearning/_mnist.ipynb
@@ -54,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "device=\"GPU\" #\"GPU\"\n",
     "labels_per_round=100\n",
     "numInitLabels = labels_per_round\n",
     "learning_rate=0.001\n",
