--- a/ActiveLearning/_cifar11.ipynb
+++ b/ActiveLearning/_cifar11.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_per_round=2000\n",
+    "device=\"GPU\" #\"GPU\"\n",
+    "labels_per_round=1000\n",
     "numInitLabels = labels_per_round\n",
     "learning_rate=0.001\n",
     "max_epochs_per_round=100\n",
@@ -75,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_rounds = 10"
+    "num_rounds = 20"
    ]
   },
   {
@@ -661,7 +662,8 @@
     "                            model_name = model_name, \n",
     "                            learning_rate = learning_rate, \n",
     "                            max_epochs_per_round = max_epochs_per_round,\n",
-    "                            strategy_name = strategy)\n",
+    "                            strategy_name = strategy,\n",
+    "                            device=device)\n",
     "\n",
     "mycustomSampler = customSampler(cifar11_db,\n",
     "                                DATASET_NAME = DATASET_NAME,\n",
@@ -672,7 +674,8 @@
     "                                strategy_name = strategy, \n",
     "                                number_init_labels = numInitLabels, \n",
     "                                labels_per_round = labels_per_round,\n",
-    "                                alpha_opt = True)\n",
+    "                                alpha_opt = True,\n",
+    "                                device=device)\n",
     "\n",
     "myTrainer.set_parameter(\"pixano_root\",ROOTDIR)\n",
     "mycustomSampler.set_parameter(\"pixano_root\",ROOTDIR)\n",
@@ -1884,7 +1887,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.13 ('pixano_env3')",
+   "display_name": "Python 3.10.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1898,12 +1901,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "faa21598805a2aeab7a6cebb281d986b89a84993d64c8b80ad12581d75a6a376"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
